--- a/Contracts/RF0_1_Signals.cfg
+++ b/Contracts/RF0_1_Signals.cfg
@@ -5,8 +5,6 @@ CONTRACT_TYPE
     
       description = Mission Computer Terminal: Kerbal Space Center Science Division.\n\nFROM: Kerbal Space Center - Experimental Technology Division\nTO: Mission Control\nSUBJECT: Prototype Magnetometer Testing\n\nOur science team has developed a prototype Magnetometer utilizing the latest advances in electronics technology. This experimental device is designed to detect and analyze magnetic field variations with unprecedented sensitivity.\n\nInitial lab tests have shown promising results, but we're getting way too much interference on the ground. To properly calibrate this new technology, we need to conduct field testing in various orbital environments around Kerbin.\n\nThe Science Council has authorized a special mission to deploy and test this prototype device, with the possibility of extended testing in deep space if initial results warrant further investigation.
     
-//    notes = The Science Council requires:\n\n- A deep space probe equipped with advanced sensor packages\n- //Deployment beyond Kerbin's sphere of influence\n- Extended monitoring period to capture signal variations\n- //Capability to transmit findings back to KSC\n\nThis mission could potentially lead to a significant scientific //breakthrough.
-    
     synopsis = Deploy and test the prototype Magnetometer in high Kerbin orbit.
     
 completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have revealed something unexpected. Our analysis team has detected distinct patterns in the background electromagnetic field that don't match any known natural phenomenon in the Kerbin system.\n\nThese readings appear to vary in intensity depending on our orbital position, suggesting they might originate from beyond our immediate vicinity. The Science Council has authorized an immediate follow-up mission to investigate these anomalous readings in deep space, away from Kerbin's magnetic influence.
@@ -39,52 +37,153 @@ completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have
  	   part = Magnetometer
 	   title = Magnetromy
 	}    
-
-   // PARAMETERS
-
-
+//==========================================================================================
+// PARAMETERS
+//==========================================================================================
 
     PARAMETER
     {
-    name = Sequence
-    type = Sequence
-\n
+        name = MagnetometerSequence
+        type = Sequence
+        title = Advanced Magnetometer Development & Testing
+            notes = This probe represents our new generation of reusable science platforms. Designed for extended operations and orbital maneuvering capability. \nFuture missions will require vehicles capable of complex trajectory changes and deep space operations.
         PARAMETER
         {
-            name = KerbinTest1
+            name = DeployAdvancedProbe
             type = VesselParameterGroup
-            title = Test Prototype Magnetometer in Low Kerbin Orbit
-            hideChildren = true
+            title = Develop Advanced Science Probe
+            
+            define = Magnetometer Probe
+            
+            PARAMETER
+            {
+                name = HasMagnetometer
+                type = PartValidation
+                partModule = ModuleScienceExperiment
+                part = Magnetometer
+                minCount = 1
+                title = Magnetometer Experiment
+    		hideChildren = true
+            }
+            
+            PARAMETER
+            {
+                name = HasDocking
+                type = PartValidation
+                partModule = ModuleDockingNode
+                minCount = 1
+                title = Docking Port (Future Servicing)
+    		hideChildren = true
+            }
 
             PARAMETER
             {
-                name = CollectScience1
+                name = HasCommunications
+                type = PartValidation
+                partModule = ModuleDataTransmitter
+                minCount = 1
+                title = Communications System
+    		hideChildren = true
+            }
+            
+            PARAMETER
+            {
+                name = HasPowerGeneration
+                type = PartValidation
+                partModule = ModuleDeployableSolarPanel
+                minCount = 1
+                title = Power Generation System
+    		hideChildren = true
+            }
+        }
+
+//==========================================================================================
+
+        PARAMETER
+        {
+            name = LowOrbitDeployment
+            type = VesselParameterGroup
+            title = Low Kerbin Orbit Deployment
+            vessel = Magnetometer Probe
+            
+            PARAMETER
+            {
+                name = LowKerbinOrbit
+                type = Orbit
+                targetBody = Kerbin
+                minAltitude = 150000
+                maxAltitude = 300000
+                title = Establish Low Kerbin Orbit (150-300km)
+            }
+        }
+        
+//==========================================================================================
+
+        PARAMETER
+        {
+            name = InitialTesting
+            type = VesselParameterGroup
+            title = Initial Magnetometer Testing
+            vessel = Magnetometer Probe
+            
+            PARAMETER
+            {
+                name = CollectLowOrbitData
                 type = CollectScience
                 experiment = magnetometer
                 situation = InSpaceLow
                 targetBody = Kerbin
                 recoveryMethod = Transmit
+                title = Transmit Low Orbit Magnetometer Data
+    		hideChildren = true
             }
-	}
+        }
+        
+//==========================================================================================
 
         PARAMETER
         {
-            name = DeepSpace2
+            name = HighOrbitTransfer
             type = VesselParameterGroup
-            title = Phase 2: Repeat this test in High Kerban Orbit.
-            hideChildren = true
-        
+            title = High Kerbin Orbit Transfer
+            vessel = Magnetometer Probe
+            notes = Low Orbit Test Completed... Incoming Message...\n\n\nURGENT PRIORITY\n\nThe initial Magnetometer readings have revealed something unexpected. Our analysis team has detected distinct patterns in the background electromagnetic field that don't match any known natural phenomenon in the Kerbin system.\n\nThese readings appear to vary in intensity depending on our orbital position, suggesting they might originate from beyond our immediate vicinity.\n\n The Science Council has authorized an immediate follow-up mission to investigate these anomalous readings in high orbit, further away from Kerbin's magnetic influence.
+            
             PARAMETER
             {
-                name = CollectScience2
+                name = HighKerbinOrbit
+                type = Orbit
+                targetBody = Kerbin
+                minAltitude = 1000000
+                maxAltitude = 3000000
+                title = Transfer to High Kerbin Orbit (1000-3000km)
+            }
+        }
+
+//==========================================================================================
+        
+        PARAMETER
+        {
+            name = ExtendedRangeTesting
+            type = VesselParameterGroup
+            title = Extended Range Testing
+            vessel = Magnetometer Probe
+            
+            PARAMETER
+            {
+                name = CollectHighOrbitData
                 type = CollectScience
                 experiment = magnetometer
                 situation = InSpaceHigh
                 targetBody = Kerbin
                 recoveryMethod = Transmit
+                title = Transmit High Orbit Magnetometer Data
+    		hideChildren = true
             }
         }
     }
+//==========================================================================================
+//==========================================================================================
 
     BEHAVIOUR
     {
@@ -104,7 +203,7 @@ completedMessage = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have
 	name = TestMessage2
         type = Message
 	title = Mission Computer
-	message = High Orbit Test Completed... Incoming Message...\n\n\nURGENT PRIORITY\n\nThe initial Magnetometer readings have revealed something unexpected. Our analysis team has detected distinct patterns in the background electromagnetic field that don't match any known natural phenomenon in the Kerbin system.\n\nThese readings appear to vary in intensity depending on our orbital position, suggesting they might originate from beyond our immediate vicinity.\n\n The Science Council has authorized an immediate follow-up mission to investigate these anomalous readings in deep space, away from Kerbin's magnetic influence.
+	message = High Orbit Test Completed... 
 
         CONDITION
         {
