--- a/Contracts/RF0_2_Signals.cfg
+++ b/Contracts/RF0_2_Signals.cfg
@@ -5,7 +5,7 @@ CONTRACT_TYPE
     
     description = Mission Computer Terminal: Kerbal Space Center Science Division.\n\nFROM: Kerbal Space Center - Deep Space Monitoring Network\nTO: Mission Control\nSUBJECT: Anomalous Electromagnetic Patterns\n\nYour initial Magnetometer test has detected unexpected patterns in the background electromagnetic field. These readings don't match any known natural phenomenon in the Kerbin system and appear to vary in intensity depending on orbital position.\n\nTo properly isolate these signals from Kerbin's magnetic influence, we need to conduct additional testing in deep space. Please proceed with your vessel beyond Kerbin's sphere of influence and transmit new readings from interplanetary space.\n\nThe Science Council has upgraded this investigation to priority level BETA and is awaiting your findings with great interest.
     
-    notes = To confirm the source of these anomalous readings, your probe must escape Kerbin's sphere of influence and transmit data from deep space.
+
     
     synopsis = Investigate mysterious signals by testing the Magnetometer in deep space.
     
@@ -45,6 +45,8 @@ CONTRACT_TYPE
         type = VesselParameterGroup
         title = Investigate Unusual Readings in Deep Space
  	targetBody = Sun 
+	notes = URGENT TRANSMISSION\n\nThe initial Magnetometer readings have revealed something unexpected. Our analysis team has detected distinct patterns in the background electromagnetic field that don't match any known natural phenomenon in the Kerbin system.\n\nThese readings appear to vary in intensity depending on our orbital position, suggesting they might originate from beyond our immediate vicinity. The Science Council has authorized an immediate follow-up mission to investigate these anomalous readings in deep space, away from Kerbin's magnetic influence.
+
 
         PARAMETER
         {
@@ -54,7 +56,8 @@ CONTRACT_TYPE
             targetBody = Sun
             recoveryMethod = Transmit
             title = Transmit Magnetometer readings from deep space
-	    hidden = True
+	 // hidden = True
+            notes = To confirm the source of these anomalous readings, your probe must escape Kerbin's sphere of influence and transmit data from deep space.
         }
     }
 
@@ -76,7 +79,9 @@ CONTRACT_TYPE
 	name = DeepMessage2
         type = Message
 	title = Mission Computer
-	message = Incoming Message...\n\nURGENT PRIORITY\n\nThe deep space Magnetometer readings have revealed something remarkable. Our analysis team has detected a distinct pattern of electromagnetic variations originating from the direction of the Duna system.\n\nThese patterns do not match any known natural phenomenon and appear to vary in intensity in ways that suggest they may be linked to some unknown property of Duna's composition.\n\nThe Science Council has upgraded this finding to priority level ALPHA and is now evaluating proposals for a dedicated mission to investigate the source of these unusual readings.
+        message = URGENT PRIORITY\n\nThe deep space Magnetometer readings have revealed something remarkable. Our analysis team has detected a distinct pattern of electromagnetic variations originating from the direction of the Duna system.\n\nThese patterns do not match any known natural phenomenon and appear to vary in intensity in ways that suggest they may be linked to some unknown property of Duna's composition.\n\nThe Science Council has upgraded this finding to priority level ALPHA and is now evaluating proposals for a dedicated mission to investigate the source of these unusual readings.
+
+
         CONDITION
         {
 	condition = CONTRACT_COMPLETED
@@ -84,3 +89,4 @@ CONTRACT_TYPE
     }
 
 }
+
