--- a/Contracts/RF1_1a_DunaOrbitalOps.cfg
+++ b/Contracts/RF1_1a_DunaOrbitalOps.cfg
@@ -1,154 +1,249 @@
 CONTRACT_TYPE
 {
-    name = RF1_1a_DunaOrbitalOps
-    title = RF1.1a: "Duna Orbital Operations"
+    name = RFP1_1a_InterplanetaryComms
+    title = RFP1.1a: "Interplanetary Communications Network"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Orbital Science Station Deployment\n\nThe Duna transfer window is now open. All pathfinder technologies have been validated, and we are cleared for deployment operations.\n\nYour primary objective is to deploy the orbital science station to Duna using the proven orbital platform technology validated in RFP1.1d. This station will serve as the cornerstone of our Duna system operations, providing science processing capabilities, crew support, and docking infrastructure for all future missions.\n\nThe modular design has been thoroughly tested in Kerbin orbit. Deploy the validated configuration to establish our permanent research presence in the Duna system.
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Technology Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Communications Relay Architecture Validation\n\nBefore we commit to deploying communications infrastructure in the Duna system, we need to validate our relay constellation management technology. The challenges of maintaining continuous coverage across multiple orbital mechanics require thorough testing.\n\nThis pathfinder mission will test our communications relay architecture in the Kerbin system, where we can monitor performance closely and make adjustments before interplanetary deployment.\n\nYour objective is to deploy and operate a 3-satellite relay constellation that provides continuous coverage during various orbital configurations. This will prove our ability to coordinate multiple communications assets and maintain reliable data transmission under dynamic conditions.
     
-    notes = Deployment Requirements:\n\nOrbital Platform Deployment\nDeploy the proven orbital platform technology (RFP1.1d) to establish primary research facility in Duna orbit.\n\nScience Processing Capability\nDemonstrate science lab operations and data processing to validate research infrastructure.\n\nDocking Infrastructure\nCreate docking capabilities for future operations including crew rotation and supply missions.\n\nCommunications Integration\nEstablish communications compatibility with the system-wide network being deployed in parallel missions.
+    notes = Technology Validation Requirements:\n\nRelay Constellation Management\nDeploy 3 relay satellites in different Kerbin orbits to test coordination between multiple communications assets.\n\nContinuous Coverage Demonstration\nProve constellation maintains continuous coverage during orbital mechanics and satellite positioning changes.\n\nHigh-Gain Antenna Systems\nTest high-gain antenna systems and data transmission capabilities under various range and angle conditions.\n\nSatellite Coordination\nDemonstrate coordinated operations between multiple satellites including handoff procedures and redundant coverage.
     
-    synopsis = Deploy proven orbital platform technology to establish Duna orbital science station.
+    synopsis = Validate communications relay constellation technology in Kerbin system before interplanetary deployment.
     
-    completedMessage = Duna orbital operations successfully established! The science station is operational and ready to support sustained research activities. Docking infrastructure ready for future missions.
+    completedMessage = Excellent work! The communications relay constellation has successfully demonstrated continuous coverage and coordination capabilities. The technology is now validated for interplanetary deployment. RFP1.1b is now available.
     
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
     
-    // Contract requirements - transfer window timing
-    minExpiry = 730
-    maxExpiry = 730
-    deadline = 547
+    // Contract requirements
+    minExpiry = 1460
+    maxExpiry = 1460
+    deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
-    prestige = Significant
+    autoAccept = true
+    prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Available after all pathfinders complete
+    // Available after RF0.2 completion
     REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1e_ResourceExtraction
+        contractType = RF0_2_Signals
     }
     
-    // Verify orbital platform technology was validated
-    REQUIREMENT
-    {
-        name = OrbitalPlatformValidated
-        type = Expression
-        expression = @/scienceStation_template_proven
-    }
-    
-    // Rewards - deployment mission level
-    advanceFunds = 150000.0
-    rewardFunds = 300000.0
+    // Rewards - pathfinder level
+    advanceFunds = 75000.0
+    rewardFunds = 150000.0
     rewardScience = 200.0
-    rewardReputation = 50.0
+    rewardReputation = 25.0
     
     // Target Body
-    targetBody = Duna
+    targetBody = Kerbin
     
-    // Establish Science Station Role reference for future missions
-    DATA
-    {
-        type = Vessel
-        dunaStation = @DunaStationGroup/DunaStationVessel
-        requiredValue = false
-    }
+//==========================================================================================
+PARAMETERS
+//==========================================================================================
     
-    // Hidden role validation for future contracts
-    DATA
-    {
-        type = bool
-        dunaStation_scienceStationRole = true
-        persist = true
-    }
-    
-    // Objectives - Deploy validated orbital platform technology
+    // Objectives - Deploy 3 relay satellites in different orbits
     PARAMETER
     {
-        name = DunaStationGroup
+        name = DeployAdvancedProbe
         type = VesselParameterGroup
-        title = Deploy Duna Orbital Science Station
-        
-        define = Duna Science Station
-        
+        title = Develop Flexible Satellite Constellation 
+	notes = Technology Validation Requirements:\n\nRelay Constellation Management\nDeploy 3 relay satellites in different Kerbin orbits to test coordination between multiple communications assets.\n\nContinuous Coverage Demonstration\nProve constellation maintains continuous coverage during orbital mechanics and satellite positioning changes.\n\nHigh-Gain Antenna Systems\nTest high-gain antenna systems and data transmission capabilities under various range and angle conditions.
+    
+         
         PARAMETER
         {
-            name = DunaOrbit
-            type = Orbit
-            targetBody = Duna
-            minAltitude = 100000
-            maxAltitude = 500000
-        }
-        
-        PARAMETER
-        {
-            name = HasScienceLab
-            type = PartValidation
-            partModule = ModuleScienceLab
-            minCount = 1
-            title = Science Laboratory Module
-        }
-        
-        PARAMETER
-        {
-            name = HasDockingPorts
-            type = PartValidation
-            partModule = ModuleDockingNode
-            minCount = 2
-            title = Docking Infrastructure (minimum 2 ports)
-        }
-        
-        PARAMETER
-        {
-            name = HasPowerGeneration
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 2
-            title = Power Generation Systems
-        }
-        
-        PARAMETER
-        {
-            name = HasCommunications
+
+            name = HasHighGainAntenna1
             type = PartValidation
             partModule = ModuleDataTransmitter
-            minCount = 1
-            title = Communications Equipment
+            title = Each Satellite has Comms
+            minCount = 3 
+	    hideChildren = true 
         }
-        
+
         PARAMETER
         {
-            name = HasCrewCapacity
+            name = DeployableSolarPanel
             type = PartValidation
-            partModule = ModuleCommand
-            minCount = 1
-            title = Crew Support Systems
+            partModule = ModuleDeployableSolarPanel
+            minCount = 6
+            title = Each Satellite has 2 Solar Panels
+ 	    hideChildren = true
         }
+  
+        PARAMETER
+        {
+            name = LowKerbinOrbit
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 150000
+	    hidden = true
+	}
     }
+
+//==========================================================================================
+
+PARAMETER
+{
+    name = RelaySat1Group
+    type = VesselParameterGroup
+    title = Deploy Relay Satellite 1 (Low Orbit)
     
+    define = Kerbin Relay 1
+    
+    // Hidden destination/situation parameter
     PARAMETER
     {
-        name = ScienceProcessing
-        type = CollectScience
-        targetBody = Duna
-        situation = InSpaceHigh
-        recoveryMethod = Transmit
-        title = Demonstrate Science Processing Capability
-        notes = Process and transmit science data to validate laboratory operations.
+        name = ReachKerbin1
+        type = ReachState
+        targetBody = Kerbin
+        situation = ORBITING
+        minAltitude = 150000
+        maxAltitude = 300000
+        hidden = true  // Hides the destination/situation requirement
     }
     
+    // Visible altitude parameter
     PARAMETER
     {
-        name = StationReadiness
-        type = Timer
-        parameter = DunaStationGroup
-        duration = 5d
-        title = Station Operational Readiness - 5 days
-        notes = Maintain stable operations to validate system readiness for future missions.
+        name = OrbitAltitude1
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 150000
+        maxAltitude = 300000
+        title = Altitude: Between 150,000 m and 300,000 m
+ 	    hideChildren = true
+    }
+    
+    // Visible inclination parameter  
+    PARAMETER
+    {
+        name = OrbitInclination1
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 150000
+        minInclination = 0
+        maxInclination = 15
+        title = Inclination: Below 15.0°
+ 	    hideChildren = true
+    }
+}
+//==========================================================================================
+
+PARAMETER
+{
+    name = RelaySat2Group
+    type = VesselParameterGroup
+    title = Deploy Relay Satellite 2 (Medium Orbit)
+    
+    define = Kerbin Relay 2
+    
+    // Hidden destination/situation parameter
+    PARAMETER
+    {
+        name = ReachKerbin2
+        type = ReachState
+        targetBody = Kerbin
+        situation = ORBITING 
+        minAltitude = 500000
+        maxAltitude = 800000
+        hidden = true  // Hides the destination/situation requirement
+    }
+    
+    // Visible altitude parameter
+    PARAMETER
+    {
+        name = OrbitAltitude2
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 500000
+        maxAltitude = 800000
+        title = Altitude: Between 500,000 m and 800,000 m
+	hideChildren = true
+    }
+    
+    // Visible inclination parameter
+    PARAMETER
+    {
+        name = OrbitInclination2
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 500000
+        minInclination = 30
+        maxInclination = 60
+        title = Inclination: Between 30.0° and 60.0°
+	hideChildren = true
+    }
+}
+    
+//==========================================================================================
+
+PARAMETER
+{
+    name = RelaySat3Group
+    type = VesselParameterGroup
+    title = Deploy Relay Satellite 3 (High Orbit)
+        
+    define = Kerbin Relay 3
+        
+    PARAMETER
+    {
+        name = OrbitKerbin3
+        type = Orbit
+        targetBody = Kerbin
+        situation = ORBITING
+        minAltitude = 1000000
+        maxAltitude = 2000000
+        hidden = true  // Hides the destination/situation requirement
+    }
+    
+    // Visible altitude parameter
+    PARAMETER
+    {
+        name = OrbitAltitude3
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 1000000
+        maxAltitude = 2000000
+        title = Altitude: Between 1,000,000 m and 2,000,000 m
+        hideChildren = true
+    }
+    
+    // Visible inclination parameter
+    PARAMETER
+    {
+        name = OrbitInclination3
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 1000000
+        minInclination = 75
+        maxInclination = 105
+        title = Inclination: Between 75.0° and 105.0°
+        hideChildren = true
+     }
+}
+    
+//==========================================================================================
+Behaviors
+//==========================================================================================
+
+    BEHAVIOUR
+    {
+	name = AutoAcceptMessage
+	type = Message
+	    
+	title = Mission Control
+	message = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Mission Planning Team\nSUBJECT: Contract Award - Duna Investigation Initiative\n\nThe Science Council has reviewed all submitted proposals for the Duna investigation mission and is pleased to inform you that Lowne Aerospace has been selected as the primary contractor.\n\nYour company's innovative approach to deep space operations and proven track record in complex mission execution make you the ideal partner for this scientific endeavor. The initiative has been assigned the codename "RED FRONTIER" and classified as a Priority Alpha mission.\n\nBefore committing to expensive interplanetary deployment, we will conduct comprehensive technology validation through pathfinder missions in the Kerbin system. This approach ensures mission success while minimizing risk and cost overruns.
+	  
+	CONDITION
+	{
+	    condition = CONTRACT_ACCEPTED
+	}
     }
 }
