--- a/Contracts/RF1_1b_DunaCommsNetwork.cfg
+++ b/Contracts/RF1_1b_DunaCommsNetwork.cfg
@@ -1,144 +1,74 @@
 CONTRACT_TYPE
 {
-    name = RF1_1b_DunaCommsNetwork
-    title = RF1.1b: "Duna Communications Network"
+    name = RFP1_1b_PrecisionLanding
+    title = RFP1.1b: "Precision Landing Technology"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna System Communications Infrastructure\n\nThe Duna transfer window is now open. Your objective is to establish the communications network in the Duna system using the proven relay constellation technology validated in RFP1.1a.\n\nThis network will provide continuous coverage throughout the Duna system, enabling coordination between all deployed assets and maintaining reliable contact with Kerbin. The constellation must integrate with the existing heliocentric communications infrastructure and provide redundant coverage for mission-critical operations.\n\nDeploy the validated communications hub configuration to create comprehensive system-wide coverage that will support all future Duna operations.
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems\n\nOur upcoming Duna missions will require precise landing capabilities to deploy surface probes at specific locations of scientific interest. Before committing to interplanetary deployment, we must validate our precision landing technology and surface operations protocols.\n\nThis pathfinder mission will test precision landing systems by deploying probes to specific coordinates across different Kerbin biomes. The varied terrain and environmental conditions will provide comprehensive validation of our landing technology before Duna deployment.\n\nYour objective is to demonstrate precision landing within 500 meters of designated targets, prove surface science operations capability, and validate probe survival and communication systems for extended operations.
     
-    notes = Deployment Requirements:\n\nRelay Constellation Deployment\nDeploy the proven communications constellation technology (RFP1.1a) to provide continuous Duna system coverage.\n\nHeliocentric Integration\nIntegrate with existing heliocentric communications infrastructure for interplanetary transmission.\n\nHigh-Gain Antenna Systems\nImplement high-gain antenna systems for reliable long-range transmission to Kerbin and system-wide coverage.\n\nRedundant Coverage\nEstablish redundant communication pathways to ensure mission-critical reliability for ongoing operations.
+    notes = Technology Validation Requirements:\n\nPrecision Landing Systems\nLand probes at 3 specific coordinates on Kerbin in different biomes, demonstrating precision within 500m of target.\n\nSurface Science Operations\nTest surface science operations and data transmission from landed probes to validate scientific capability.\n\nProbe Survival and Operations\nProve probe survival and operation for minimum 10 days to validate extended surface mission capability.\n\nSurface-to-Orbit Communications\nDemonstrate reliable communication between surface assets and orbital relay infrastructure.
     
-    synopsis = Deploy proven communications technology to establish comprehensive Duna system network.
+    synopsis = Validate precision landing and surface operations technology using Kerbin as test environment.
     
-    completedMessage = Duna communications network successfully established! Continuous system coverage operational with reliable Kerbin connectivity. All future missions can depend on this communications infrastructure.
+    completedMessage = Outstanding! The precision landing technology has been successfully validated. All surface probes demonstrated accurate landing capability and reliable operations. The technology is ready for interplanetary deployment. RFP1.1c is now available.
     
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
     
-    // Contract requirements - transfer window timing
-    minExpiry = 730
-    maxExpiry = 730
-    deadline = 547
+    // Contract requirements
+    minExpiry = 1460
+    maxExpiry = 1460
+    deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
-    prestige = Significant
+    autoAccept = true
+    prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Available after all pathfinders complete
+    // Available after RFP1.1a completion
     REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1e_ResourceExtraction
+        contractType = RFP1_1a_InterplanetaryComms
     }
     
-    // Verify communications technology was validated
-    REQUIREMENT
-    {
-        name = CommHubValidated
-        type = Expression
-        expression = @/commHub_template_proven
-    }
-    
-    // Rewards - deployment mission level
-    advanceFunds = 100000.0
-    rewardFunds = 200000.0
+    // Rewards - pathfinder level
+    advanceFunds = 50000.0
+    rewardFunds = 100000.0
     rewardScience = 150.0
-    rewardReputation = 40.0
+    rewardReputation = 20.0
     
     // Target Body
-    targetBody = Duna
+    targetBody = Kerbin
     
-    // Establish Communications Hub Role reference for future missions
-    DATA
-    {
-        type = Vessel
-        dunaCommHub = @CommHubGroup/CommHubVessel
-        requiredValue = false
-    }
+
     
-    // Hidden role validation for future contracts
-    DATA
-    {
-        type = bool
-        dunaCommHub_communicationsRole = true
-        persist = true
-    }
-    
-    // Objectives - Deploy validated communications technology
+    // Objectives - Land probes at specific coordinates in different biomes
     PARAMETER
     {
-        name = CommHubGroup
+        name = ProbeGrasslands
         type = VesselParameterGroup
-        title = Deploy Duna Communications Hub
+        title = Deploy Probe 1 (Grasslands)
         
-        define = Duna Communications Hub
+        define = Precision Probe 1
         
         PARAMETER
         {
-            name = CommOrbit
-            type = Orbit
-            targetBody = Duna
-            minAltitude = 300000
-            maxAltitude = 800000
+            name = ReachStateGrasslands
+            type = ReachState
+            targetBody = Kerbin
+            situation = LANDED
+            biome = Grasslands
         }
         
         PARAMETER
         {
-            name = HasHighGainAntenna
+            name = HasScienceExperiments1
             type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 3
-            title = High-Gain Antenna Array (minimum 3)
-        }
-        
-        PARAMETER
-        {
-            name = HasPowerGeneration
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
+            partModule = ModuleScienceExperiment
             minCount = 2
-            title = Power Generation Systems
-        }
-        
-        PARAMETER
-        {
-            name = HasStabilization
-            type = PartValidation
-            partModule = ModuleReactionWheel
-            minCount = 1
-            title = Attitude Control Systems
-        }
-    }
-    
-    PARAMETER
-    {
-        name = RelaySatellite1
-        type = VesselParameterGroup
-        title = Deploy Relay Satellite 1 (Polar Coverage)
-        
-        define = Duna Relay 1
-        
-        PARAMETER
-        {
-            name = PolarOrbit
-            type = Orbit
-            targetBody = Duna
-            minAltitude = 500000
-            maxAltitude = 1000000
-            minInclination = 80
-            maxInclination = 100
-        }
-        
-        PARAMETER
-        {
-            name = HasRelay1
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-            title = Relay Antenna
         }
         
         PARAMETER
@@ -147,36 +77,50 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 1
-            title = Power Generation
+        }
+        
+        PARAMETER
+        {
+            name = HasAntenna1
+            type = PartValidation
+            partModule = ModuleDataTransmitter
+            minCount = 1
+        }
+        
+        PARAMETER
+        {
+            name = CollectScienceGrasslands
+            type = CollectScience
+            targetBody = Kerbin
+            situation = SrfLanded
+            biome = Grasslands
+            recoveryMethod = Transmit
         }
     }
     
     PARAMETER
     {
-        name = RelaySatellite2
+        name = ProbeDeserts
         type = VesselParameterGroup
-        title = Deploy Relay Satellite 2 (Equatorial Coverage)
+        title = Deploy Probe 2 (Deserts)
         
-        define = Duna Relay 2
+        define = Precision Probe 2
         
         PARAMETER
         {
-            name = EquatorialOrbit
-            type = Orbit
-            targetBody = Duna
-            minAltitude = 200000
-            maxAltitude = 400000
-            minInclination = 0
-            maxInclination = 15
+            name = ReachStateDeserts
+            type = ReachState
+            targetBody = Kerbin
+            situation = LANDED
+            biome = Deserts
         }
         
         PARAMETER
         {
-            name = HasRelay2
+            name = HasScienceExperiments2
             type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-            title = Relay Antenna
+            partModule = ModuleScienceExperiment
+            minCount = 2
         }
         
         PARAMETER
@@ -185,19 +129,77 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 1
-            title = Power Generation
+        }
+        
+        PARAMETER
+        {
+            name = HasAntenna2
+            type = PartValidation
+            partModule = ModuleDataTransmitter
+            minCount = 1
+        }
+        
+        PARAMETER
+        {
+            name = CollectScienceDeserts
+            type = CollectScience
+            targetBody = Kerbin
+            situation = SrfLanded
+            biome = Deserts
+            recoveryMethod = Transmit
         }
     }
     
     PARAMETER
     {
-        name = NetworkValidation
-        type = Timer
-        parameter = CommHubGroup
-        parameter = RelaySatellite1
-        parameter = RelaySatellite2
-        duration = 3d
-        title = Network Integration Test - 3 days
-        notes = All communications assets must maintain coordinated operations to validate system coverage.
+        name = ProbeTundra
+        type = VesselParameterGroup
+        title = Deploy Probe 3 (Tundra)
+        
+        define = Precision Probe 3
+        
+        PARAMETER
+        {
+            name = ReachStateTundra
+            type = ReachState
+            targetBody = Kerbin
+            situation = LANDED
+            biome = Tundra
+        }
+        
+        PARAMETER
+        {
+            name = HasScienceExperiments3
+            type = PartValidation
+            partModule = ModuleScienceExperiment
+            minCount = 2
+        }
+        
+        PARAMETER
+        {
+            name = HasPower3
+            type = PartValidation
+            partModule = ModuleDeployableSolarPanel
+            minCount = 1
+        }
+        
+        PARAMETER
+        {
+            name = HasAntenna3
+            type = PartValidation
+            partModule = ModuleDataTransmitter
+            minCount = 1
+        }
+        
+        PARAMETER
+        {
+            name = CollectScienceTundra
+            type = CollectScience
+            targetBody = Kerbin
+            situation = SrfLanded
+            biome = Tundra
+            recoveryMethod = Transmit
+        }
     }
+    
 }
