--- a/Contracts/RF1_1c_DunaSurfaceSurvey.cfg
+++ b/Contracts/RF1_1c_DunaSurfaceSurvey.cfg
@@ -1,102 +1,66 @@
 CONTRACT_TYPE
 {
-    name = RF1_1c_DunaSurfaceSurvey
-    title = RF1.1c: "Duna Surface Survey"
+    name = RFP1_1b_PrecisionLanding
+    title = RFP1.1b: "Precision Landing Technology"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Surface Operations Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Surface Probe Network Deployment\n\nThe Duna transfer window is now open. Your objective is to deploy surface probes across Duna using the proven precision landing technology validated in RFP1.1b.\n\nThese probes will establish our initial surface presence and conduct comprehensive scientific surveys across multiple biomes. The precision landing technology has been thoroughly tested, enabling accurate deployment to regions of scientific interest.\n\nDeploy a minimum of three surface probes to different Duna biomes, establish surface science operations, and create reliable surface-to-orbit communication links that integrate with the communications network being deployed in parallel missions.
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems\n\nOur upcoming Duna missions will require precise landing capabilities to deploy surface probes at specific locations of scientific interest. Before committing to interplanetary deployment, we must validate our precision landing technology and surface operations protocols.\n\nThis pathfinder mission will test precision landing systems by deploying probes to specific coordinates across different Kerbin biomes. The varied terrain and environmental conditions will provide comprehensive validation of our landing technology before Duna deployment.\n\nYour objective is to demonstrate precision landing within 500 meters of designated targets, prove surface science operations capability, and validate probe survival and communication systems for extended operations.
     
-    notes = Deployment Requirements:\n\nPrecision Landing Operations\nDeploy proven precision landing technology (RFP1.1b) to land probes in different biomes across Duna.\n\nSurface Science Operations\nEstablish surface science capability and data collection across diverse terrain types and environmental conditions.\n\nSurface-to-Orbit Communications\nCreate reliable communication links between surface assets and orbital infrastructure.\n\nMulti-Biome Coverage\nDeploy to minimum three different biomes to maximize scientific return and validate landing technology diversity.
+    notes = Technology Validation Requirements:\n\nPrecision Landing Systems\nLand probes at 3 specific coordinates on Kerbin in different biomes, demonstrating precision within 500m of target.\n\nSurface Science Operations\nTest surface science operations and data transmission from landed probes to validate scientific capability.\n\nProbe Survival and Operations\nProve probe survival and operation for minimum 10 days to validate extended surface mission capability.\n\nSurface-to-Orbit Communications\nDemonstrate reliable communication between surface assets and orbital relay infrastructure.
     
-    synopsis = Deploy proven precision landing technology to establish comprehensive surface probe network.
+    synopsis = Validate precision landing and surface operations technology using Kerbin as test environment.
     
-    completedMessage = Duna surface survey successfully completed! Multiple surface probes operational across different biomes with reliable communications. Surface science operations established and ready for expanded exploration.
+    completedMessage = Outstanding! The precision landing technology has been successfully validated. All surface probes demonstrated accurate landing capability and reliable operations. The technology is ready for interplanetary deployment. RFP1.1c is now available.
     
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
     
-    // Contract requirements - transfer window timing
-    minExpiry = 730
-    maxExpiry = 730
-    deadline = 547
+    // Contract requirements
+    minExpiry = 1460
+    maxExpiry = 1460
+    deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
-    prestige = Significant
+    autoAccept = true
+    prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Available after all pathfinders complete
+    // Available after RFP1.1a completion
     REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1e_ResourceExtraction
+        contractType = RFP1_1a_InterplanetaryComms
     }
     
-    // Verify precision landing technology was validated
-    REQUIREMENT
-    {
-        name = PrecisionLandingValidated
-        type = Expression
-        expression = @/surfaceProbe_template_proven
-    }
-    
-    // Rewards - deployment mission level
-    advanceFunds = 120000.0
-    rewardFunds = 240000.0
-    rewardScience = 300.0
-    rewardReputation = 45.0
+    // Rewards - pathfinder level
+    advanceFunds = 50000.0
+    rewardFunds = 100000.0
+    rewardScience = 150.0
+    rewardReputation = 20.0
     
     // Target Body
-    targetBody = Duna
+    targetBody = Kerbin
     
-    // Establish Surface Probe Role references for future missions
-    DATA
-    {
-        type = Vessel
-        dunaProbe1 = @SurfaceProbe1/Probe1Vessel
-        requiredValue = false
-    }
+
     
-    DATA
-    {
-        type = Vessel
-        dunaProbe2 = @SurfaceProbe2/Probe2Vessel
-        requiredValue = false
-    }
-    
-    DATA
-    {
-        type = Vessel
-        dunaProbe3 = @SurfaceProbe3/Probe3Vessel
-        requiredValue = false
-    }
-    
-    // Hidden role validation for future contracts
-    DATA
-    {
-        type = bool
-        dunaProbes_surfaceOpsRole = true
-        persist = true
-    }
-    
-    // Objectives - Deploy validated precision landing technology
+    // Objectives - Land probes at specific coordinates in different biomes
     PARAMETER
     {
-        name = SurfaceProbe1
+        name = ProbeGrasslands
         type = VesselParameterGroup
-        title = Deploy Surface Probe 1 (Lowlands)
+        title = Deploy Probe 1 (Grasslands)
         
-        define = Duna Surface Probe 1
+        define = Precision Probe 1
         
         PARAMETER
         {
-            name = LandLowlands
+            name = ReachStateGrasslands
             type = ReachState
-            targetBody = Duna
+            targetBody = Kerbin
             situation = LANDED
-            biome = Lowlands
+            biome = Grasslands
         }
         
         PARAMETER
@@ -105,54 +69,50 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleScienceExperiment
             minCount = 2
-            title = Science Instrument Package
         }
         
         PARAMETER
         {
-            name = HasPowerGeneration1
+            name = HasPower1
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 1
-            title = Power Generation
         }
         
         PARAMETER
         {
-            name = HasCommunications1
+            name = HasAntenna1
             type = PartValidation
             partModule = ModuleDataTransmitter
             minCount = 1
-            title = Communications Equipment
         }
         
         PARAMETER
         {
-            name = CollectScienceLowlands
+            name = CollectScienceGrasslands
             type = CollectScience
-            targetBody = Duna
+            targetBody = Kerbin
             situation = SrfLanded
-            biome = Lowlands
+            biome = Grasslands
             recoveryMethod = Transmit
-            title = Transmit Lowlands Science Data
         }
     }
     
     PARAMETER
     {
-        name = SurfaceProbe2
+        name = ProbeDeserts
         type = VesselParameterGroup
-        title = Deploy Surface Probe 2 (Highlands)
+        title = Deploy Probe 2 (Deserts)
         
-        define = Duna Surface Probe 2
+        define = Precision Probe 2
         
         PARAMETER
         {
-            name = LandHighlands
+            name = ReachStateDeserts
             type = ReachState
-            targetBody = Duna
+            targetBody = Kerbin
             situation = LANDED
-            biome = Highlands
+            biome = Deserts
         }
         
         PARAMETER
@@ -161,54 +121,50 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleScienceExperiment
             minCount = 2
-            title = Science Instrument Package
         }
         
         PARAMETER
         {
-            name = HasPowerGeneration2
+            name = HasPower2
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 1
-            title = Power Generation
         }
         
         PARAMETER
         {
-            name = HasCommunications2
+            name = HasAntenna2
             type = PartValidation
             partModule = ModuleDataTransmitter
             minCount = 1
-            title = Communications Equipment
         }
         
         PARAMETER
         {
-            name = CollectScienceHighlands
+            name = CollectScienceDeserts
             type = CollectScience
-            targetBody = Duna
+            targetBody = Kerbin
             situation = SrfLanded
-            biome = Highlands
+            biome = Deserts
             recoveryMethod = Transmit
-            title = Transmit Highlands Science Data
         }
     }
     
     PARAMETER
     {
-        name = SurfaceProbe3
+        name = ProbeTundra
         type = VesselParameterGroup
-        title = Deploy Surface Probe 3 (Polar Regions)
+        title = Deploy Probe 3 (Tundra)
         
-        define = Duna Surface Probe 3
+        define = Precision Probe 3
         
         PARAMETER
         {
-            name = LandPolar
+            name = ReachStateTundra
             type = ReachState
-            targetBody = Duna
+            targetBody = Kerbin
             situation = LANDED
-            biome = Polar Highlands
+            biome = Tundra
         }
         
         PARAMETER
@@ -217,48 +173,33 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleScienceExperiment
             minCount = 2
-            title = Science Instrument Package
         }
         
         PARAMETER
         {
-            name = HasPowerGeneration3
+            name = HasPower3
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 1
-            title = Power Generation
         }
         
         PARAMETER
         {
-            name = HasCommunications3
+            name = HasAntenna3
             type = PartValidation
             partModule = ModuleDataTransmitter
             minCount = 1
-            title = Communications Equipment
         }
         
         PARAMETER
         {
-            name = CollectSciencePolar
+            name = CollectScienceTundra
             type = CollectScience
-            targetBody = Duna
+            targetBody = Kerbin
             situation = SrfLanded
-            biome = Polar Highlands
+            biome = Tundra
             recoveryMethod = Transmit
-            title = Transmit Polar Science Data
         }
     }
     
-    PARAMETER
-    {
-        name = SurfaceNetworkValidation
-        type = Timer
-        parameter = SurfaceProbe1
-        parameter = SurfaceProbe2
-        parameter = SurfaceProbe3
-        duration = 7d
-        title = Surface Network Operations - 7 days
-        notes = All surface probes must maintain operations and communications to validate network reliability.
-    }
 }
