--- a/Contracts/RF1_1d_IkeResourceOps.cfg
+++ b/Contracts/RF1_1d_IkeResourceOps.cfg
@@ -1,132 +1,88 @@
 CONTRACT_TYPE
 {
-    name = RF1_1d_IkeResourceOps
-    title = RF1.1d: "Ike Resource Operations"
+    name = RFP1_1d_OrbitalPlatform
+    title = RFP1.1d: "Orbital Platform Technology"
     
-    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Ike Resource Extraction Facility Deployment\n\nThe Duna transfer window is now open. Your objective is to establish resource extraction operations on Ike using the proven ISRU technology validated in RFP1.1e on Minmus.\n\nThis facility will provide fuel production capability to support sustained operations throughout the Duna system, reducing dependency on supply missions from Kerbin. The ISRU technology has been thoroughly tested and proven capable of reliable autonomous operation.\n\nDeploy the validated resource extraction configuration to establish our first interplanetary fuel production facility, creating the foundation for truly sustainable operations beyond Kerbin's sphere of influence.
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Orbital Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Modular Station Architecture Validation\n\nThe Duna orbital science station will serve as the cornerstone of our interplanetary operations, requiring sophisticated modular design and autonomous assembly capabilities. Before deploying this critical infrastructure across interplanetary distances, we must validate our station architecture and assembly procedures.\n\nThis pathfinder mission will test our modular station design in Kerbin orbit, where we can monitor assembly operations closely and refine procedures before interplanetary deployment. The station must demonstrate extended autonomous operations, docking procedures, and crew support capabilities.\n\nYour objective is to design and deploy a prototype science station that validates our modular architecture, demonstrates reliable docking operations, and proves extended operational capability through sustained power generation and science processing.
     
-    notes = Deployment Requirements:\n\nISRU Systems Deployment\nDeploy proven ISRU technology (RFP1.1e) to Ike surface for ore extraction and fuel production capability.\n\nFuel Production Operations\nDemonstrate ore extraction and fuel production using validated systems and procedures.\n\nResource Storage Infrastructure\nCreate storage and distribution infrastructure for processed materials and produced fuel.\n\nAutonomous Operations\nEstablish autonomous operation capability essential for sustained interplanetary presence.
+    notes = Technology Validation Requirements:\n\nModular Station Architecture\nDeploy prototype science station to Kerbin orbit demonstrating modular design principles and component integration.\n\nDocking Operations Validation\nDemonstrate docking operations with supply craft to prove orbital assembly and logistics capabilities.\n\nPower Generation and Science Processing\nTest power generation and science processing systems under extended operation conditions.\n\nExtended Operations Capability\nMaintain station operations for 30 days to validate long-duration autonomous capability and system reliability.
     
-    synopsis = Deploy proven ISRU technology to establish Ike resource extraction and fuel production facility.
+    synopsis = Validate modular orbital station architecture and assembly operations before interplanetary deployment.
     
-    completedMessage = Ike resource operations successfully established! ISRU facility operational with proven fuel production capability. Sustainable operations foundation created for long-term Duna system presence.
+    completedMessage = Exceptional work! The orbital platform technology has been comprehensively validated. Modular station architecture, docking operations, and extended autonomous capability all proven successful. The technology is ready for Duna deployment. RFP1.1e is now available.
     
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
     
-    // Contract requirements - transfer window timing
-    minExpiry = 730
-    maxExpiry = 730
-    deadline = 547
+    // Contract requirements
+    minExpiry = 1460
+    maxExpiry = 1460
+    deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
-    prestige = Significant
+    autoAccept = true
+    prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Available after all pathfinders complete
+    // Available after RFP1.1c completion
     REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1e_ResourceExtraction
+        contractType = RFP1_1c_ReusableLaunch
     }
     
-    // Verify ISRU technology was validated
-    REQUIREMENT
-    {
-        name = ResourceExtractionValidated
-        type = Expression
-        expression = @/resourceFacility_template_proven
-    }
-    
-    // Rewards - deployment mission level
-    advanceFunds = 130000.0
-    rewardFunds = 260000.0
+    // Rewards - pathfinder level
+    advanceFunds = 80000.0
+    rewardFunds = 160000.0
     rewardScience = 250.0
-    rewardReputation = 60.0
+    rewardReputation = 35.0
     
     // Target Body
-    targetBody = Ike
+    targetBody = Minmus
     
-    // Establish Resource Facility Role reference for future missions
-    DATA
-    {
-        type = Vessel
-        ikeResourceFacility = @ResourceFacilityGroup/ResourceFacilityVessel
-        requiredValue = false
-    }
-    
-    // Hidden role validation for future contracts
+    // Science Station Role template establishment
     DATA
     {
         type = bool
-        ikeResourceFacility_resourceProductionRole = true
+        scienceStation_template_proven = true
         persist = true
     }
     
-    // Objectives - Deploy validated ISRU technology
+    // Objectives - Deploy and test orbital station
     PARAMETER
     {
-        name = ResourceFacilityGroup
+        name = StationDeployment
         type = VesselParameterGroup
-        title = Deploy Ike Resource Extraction Facility
+        title = Deploy Prototype Science Station
         
-        define = Ike Resource Facility
+        define = Minmus Science Station
         
         PARAMETER
         {
-            name = LandOnIke
-            type = ReachState
-            targetBody = Ike
-            situation = LANDED
+            name = StationOrbit
+            type = Orbit
+            targetBody = Minmus
+            minAltitude = 30000
+            maxAltitude = 100000
         }
         
         PARAMETER
         {
-            name = HasDrills
+            name = HasScienceLab
             type = PartValidation
-            partModule = ModuleResourceHarvester
-            minCount = 2
-            title = Ore Extraction Systems (minimum 2)
+            partModule = ModuleScienceLab
+            minCount = 1
         }
         
         PARAMETER
         {
-            name = HasConverters
+            name = HasDockingPorts
             type = PartValidation
-            partModule = ModuleResourceConverter
-            minCount = 2
-            title = Fuel Processing Systems (minimum 2)
-        }
-        
-        PARAMETER
-        {
-            name = HasOreStorage
-            type = HasResourceCapacity
-            resource = Ore
-            minQuantity = 500.0
-            title = Ore Storage Capacity (500+ units)
-        }
-        
-        PARAMETER
-        {
-            name = HasFuelStorage
-            type = HasResourceCapacity
-            resource = LiquidFuel
-            minQuantity = 800.0
-            title = Fuel Storage Capacity (800+ units)
-        }
-        
-        PARAMETER
-        {
-            name = HasOxidizerStorage
-            type = HasResourceCapacity
-            resource = Oxidizer
-            minQuantity = 800.0
-            title = Oxidizer Storage Capacity (800+ units)
+            partModule = ModuleDockingNode
+            minCount = 3
         }
         
         PARAMETER
@@ -134,8 +90,55 @@ CONTRACT_TYPE
             name = HasPowerGeneration
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
-            minCount = 4
-            title = Power Generation Systems (minimum 4)
+            minCount = 2
+        }
+        
+        PARAMETER
+        {
+            name = HasCommunications
+            type = PartValidation
+            partModule = ModuleDataTransmitter
+            minCount = 1
+        }
+        
+        PARAMETER
+        {
+            name = HasCrewCapacity
+            type = PartValidation
+            partModule = ModuleCommand
+            minCount = 1
+        }
+
+        PARAMETER
+        {
+            name = HasConverter
+            type = PartValidation
+            partModule = ModuleResourceConverter
+            minCount = 1
+        }
+    }
+    
+    PARAMETER
+    {
+        name = SupplyMission
+        type = VesselParameterGroup
+        title = Supply Craft Docking Test
+        
+        define = Station Supply Craft
+        
+        PARAMETER
+        {
+            name = DockWithStation
+            type = Docking
+            vessel = Minmus Science Station
+        }
+        
+        PARAMETER
+        {
+            name = HasSupplies
+            type = PartValidation
+            partModule = ModuleScienceContainer
+            minCount = 1
         }
         
         PARAMETER
@@ -144,73 +147,17 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleDockingNode
             minCount = 1
-            title = Docking Infrastructure for Fuel Transfer
         }
     }
     
-    PARAMETER
-    {
-        name = FuelProductionDemo
-        type = HasResource
-        vessel = Ike Resource Facility
-        resource = LiquidFuel
-        minQuantity = 400.0
-        title = Produce 400 units of Liquid Fuel
-        notes = Demonstrate fuel production from local ore extraction using validated ISRU systems.
-    }
     
     PARAMETER
     {
-        name = OxidizerProductionDemo
-        type = HasResource
-        vessel = Ike Resource Facility
-        resource = Oxidizer
-        minQuantity = 400.0
-        title = Produce 400 units of Oxidizer
-        notes = Demonstrate complete propellant production capability for system operations.
-    }
-    
-    PARAMETER
-    {
-        name = ResourceOperationsValidation
-        type = Timer
-        parameter = ResourceFacilityGroup
-        duration = 10d
-        title = Autonomous Operations Test - 10 days
-        notes = Facility must demonstrate autonomous operation capability essential for interplanetary deployment.
-    }
-    
-    PARAMETER
-    {
-        name = FuelTransferTest
-        type = VesselParameterGroup
-        title = Fuel Transfer Operations Test
-        
-        define = Fuel Transfer Test Craft
-        
-        PARAMETER
-        {
-            name = DockWithFacility
-            type = Docking
-            vessel = Ike Resource Facility
-        }
-        
-        PARAMETER
-        {
-            name = ReceiveFuel
-            type = HasResource
-            resource = LiquidFuel
-            minQuantity = 200.0
-            title = Receive 200 units of fuel from facility
-        }
-        
-        PARAMETER
-        {
-            name = ReceiveOxidizer
-            type = HasResource
-            resource = Oxidizer
-            minQuantity = 200.0
-            title = Receive 200 units of oxidizer from facility
-        }
+        name = ScienceProcessing
+        type = CollectScience
+        targetBody = Minmus
+        recoveryMethod = Transmit
+        title = Demonstrate Science Processing
+        notes = Process and transmit science data to validate laboratory operations.
     }
 }
